# EchoInStone

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
EchoInStone/: config.py
EchoInStone/capture/: __init__.py  audio_downloader.py  downloader_factory.py  downloader_interface.py  file_downloader.py  podcast_downloader.py  youtube_downloader.py
EchoInStone/processing/: __init__.py  aligner_interface.py  audio_processing_orchestrator.py  audio_transcriber_interface.py  diarizer_interface.py  pyannote_diarizer.py  speaker_aligner.py  whisper_audio_transcriber.py
EchoInStone/utils/: __init__.py  data_saver.py  logging_config.py  timer.py
features/: audio_download.feature  downloader.feature  invalid_url.feature  successful_download.feature  transcription_output.feature
features/steps/: __init__.py  test_audio_download_bdd.py  test_downloader_bdd.py  test_invalid_url_bdd.py  test_successful_download_bdd.py  test_transcription_output_bdd.py
tests/: test_audio_downloader.py  test_downloader_factory.py  test_integration.py
